--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,16 @@ li {
   margin: 20px;
 }
 
-
+.question-details {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  /*display: flex;*/
+  margin: 10px auto;
+  border: 1px solid #dad7d7;
+  border-radius: 3px;
+  cursor: pointer;
+}
 
 .new-question {
   width: 75%;
@@ -143,12 +152,22 @@ li {
   margin-left: 15px;
 }
 
-.textarea {
-  border-radius: 4px;
-  border: 1px solid #dad7d7;
-  padding: 10px;
+.results-header {
+  font-size: 20px;
+  font-weight: bold;
+  display:block;
+  overflow:hidden;
+  width:100%;
+  height:100%;
+}
+
+.results-option {
   font-size: 15px;
-  height: 100px;
+  font-weight: bold;
+  display:block;
+  width:100%;
+  height:100%;
+  text-align: center;
 }
 
 .poll {
