--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,17 @@ li {
   text-decoration: none;
 }
 
+.leaderboard {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  margin: 10px auto;
+  margin-bottom: 5px;
+  border: 1px solid #dad7d7;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
 .avatar {
   height: 50px;
   border-radius: 25px;
