--- a/src/index.css
+++ b/src/index.css
@@ -138,12 +138,16 @@ li {
 .question {
   width: 100%;
   max-width: 590px;
-  padding: 10px;
-  margin: 0 auto;
-  margin-bottom: 5px;
+  margin: auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
   border: 1px solid #dad7d7;
   border-radius: 3px;
   cursor: pointer;
+}
+
+.dashboard-list li:last-child {
+  margin-bottom: 50px
 }
 
 .author {
