--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,11 @@ footer {
   border-width: 2px;
 }
 
+.login-btn {
+  margin-left: 28%;
+  margin-top: 25px;
+}
+
 .center {
   text-align: center;
 }
