Fix developer console warnings, add missing navs & fix login btn style

--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,8 @@ li {
 }
 
 .login-btn {
-  margin-left: 28%;
-  margin-top: 25px;
+  margin: 25px auto !important;
+  max-width: 250px !important;
 }
 
 .center {
